--- a/config/gz_slamtec_rplidar_remappings.yaml
+++ b/config/gz_slamtec_rplidar_remappings.yaml
@@ -1,5 +1,5 @@
 ---
   - topic_name: <robot_namespace><device_namespace>/scan
     ros_type_name: sensor_msgs/msg/LaserScan
-    gz_type_name: ignition.msgs.LaserScan
+    gz_type_name: gz.msgs.LaserScan
     lazy: true
