--- a/config/gz_velodyne_remappings.yaml
+++ b/config/gz_velodyne_remappings.yaml
@@ -3,5 +3,5 @@
   - ros_topic_name: <robot_namespace><device_namespace>/velodyne_points
     gz_topic_name: <robot_namespace><device_namespace>/velodyne_points/points
     ros_type_name: sensor_msgs/msg/PointCloud2
-    gz_type_name: ignition.msgs.PointCloudPacked
+    gz_type_name: gz.msgs.PointCloudPacked
     lazy: true
